--- a/pom.xml
+++ b/pom.xml
@@ -3,21 +3,30 @@
   <groupId>visma.fisk</groupId>
   <artifactId>pocmongodb</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
   <dependencies>
  		<dependency>
 		    <groupId>org.apache.camel</groupId>
 		    <artifactId>camel-mongodb</artifactId>
 		    <version>2.23.2</version>
 		</dependency>
+		
 		<dependency>
 		    <groupId>org.apache.camel</groupId>
 		    <artifactId>camel-core</artifactId>
 		    <version>2.23.2</version>
 		</dependency>
-			<dependency>
+		
+		<dependency>
 		    <groupId>org.apache.camel</groupId>
 		    <artifactId>camel-restlet</artifactId>
 		    <version>2.23.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-spring</artifactId>
+			<version>2.23.2</version>
 		</dependency>
 	</dependencies>
 </project>
